--- a/app/views/looks/index.html.slim
+++ b/app/views/looks/index.html.slim
@@ -18,7 +18,7 @@
                     - ([1,2,3,4,5][Random.rand(4)]).times do
                       = image_tag("product/review_star.png")
                   p.product-review-count = " (#{Random.rand(0..500)})"
-              = image_tag("look/look.jpg", class: :look_image_item)
+              = image_tag(look_summary_image(look).filepath, class: :look_image_item)
               p.looks_desc_tag Description
               p.looks_desc = look.desc
             
