--- a/app/views/looks/_product_summary.html.slim
+++ b/app/views/looks/_product_summary.html.slim
@@ -1,7 +1,7 @@
 .row.product_summary
   .columns.small-3.medium-2.large-2.block.splotch
     svg.color_sample.centered height="42" width="42"
-      circle cx="21" cy="21" r="20" stroke-width=".5" stroke="grey" fill="#{product_app.product.hex_color_val}"
+      circle cx="21" cy="21" r="20" stroke-width=".5" stroke="grey" fill="#{product_app.color.hex_color_val}"
   .summary_text.columns.small-9.medium-10.large-10
     p.role
       = product_app.role.humanize.upcase
@@ -10,7 +10,7 @@
     .row.last
       .columns.large-6.medium-6.small-12.left.color-name
         p.color
-          = full_shade(product_app.product)
+          = full_color_name(product_app.color)
       .columns.large-6.medium6.small-12.stars-col
         .stars
           - ([1,2,3,4,5][Random.rand(4)]).times do
