--- a/app/assets/stylesheets/looks.css.scss
+++ b/app/assets/stylesheets/looks.css.scss
@@ -10,6 +10,7 @@ $lt-black: #303030;
 $bg-color: black;
 
 
+
 //.row.sticky-nav {
 //  margin: 0px;
 //  padding: 0px;
@@ -21,6 +22,32 @@ $bg-color: black;
   margin: 0;
   padding: 0;
 }
+
+.stars {
+ display: inline-block;
+//                 width: auto;
+ margin: 0;
+ padding: 0;
+ img {
+   margin: 0;
+   padding: 0;
+//                   border: red solid 1px;
+   
+ }
+ 
+ img.star_on {
+   @extend img;
+//                   position: relative;
+//                   left: -6%;
+//                   margin-left: .1rem;
+ }
+ 
+ img.star_off {
+   margin-left: .17rem;
+   @extend img;
+ }
+}
+
 
 .row.show_container, .row.looks-container  {
   width: 100%;
@@ -65,16 +92,16 @@ p.looks_desc {
   text-align: center;
   
   .stars-col {
-    display: inline;
-    width: 100%;
-    margin: 0 auto;
-
-    .stars {
-      display: inline-block;
-      margin: 0 auto;
-      padding: 0;
-      padding-right: 0rem;
-    }
+//    display: inline;
+//    width: 100%;
+//    margin: 0 auto;
+//
+//    .stars {
+//      display: inline-block;
+//      margin: 0 auto;
+//      padding: 0;
+//      padding-right: 0rem;
+//    }
 
     p.product-review-count {
       display: inline-block;
@@ -138,12 +165,12 @@ p.look_name {
 //    background: white;
 //    margin: 0 auto;
 
-    .stars {
-      display: inline-block;
-      margin: 0 auto;
-      padding: 0;
-      padding-right: 0rem;
-    }
+//    .stars {
+//      display: inline-block;
+//      margin: 0 auto;
+//      padding: 0;
+//      padding-right: 0rem;
+//    }
 
     p.product-review-count {
       display: inline-block;
@@ -380,7 +407,6 @@ dl.accordion {
 
       .splotch {
         display: inline-block;
-
         svg {
         }
       }  // .splotch
@@ -388,13 +414,13 @@ dl.accordion {
       .summary_text {
 
         display: inline-block;
-          padding-bottom: 2%;
+//          padding-bottom: 2%;
 
           p.role {
            font: normal .8rem/1.3rem Raleway;
            color: GoldenRod;
            margin-bottom: 0;
-           padding-top: .4rem;
+           padding-top: .5rem;
 
          }
 
@@ -402,43 +428,42 @@ dl.accordion {
            font: 200 .8rem/1.1rem Raleway;
            margin-bottom: 0;
          }
+
+         
+         p.color-name {
+           font: 200 .8rem/1.3rem Raleway;
+           margin: .25rem 0 0 0;
+           padding: 0;
+         }
+
          
          .row.last {
+//           display: inline-block;
            margin: 0;
            padding: 0;
            height: auto;
            
-           .columns.color-name {
-             margin: 0;
+           .columns {
+             magin: 0;
              padding: 0;
+           }
            
-             p.color {
-               display: inline;
-               font: 200 .8rem/1.3rem Raleway;
-               margin: 0;
-               margin-right: 1.3rem;
-               padding: 0;
-             }
-           } // .columns.color-name
-  
-             .stars-col {
-               display: inline;
 
-               .stars {
-                 display: inline-block;
-                 width: auto;
-                 margin: 0 auto;
-                 padding: 0 .5rem 0 0;
-               }
-
-               p.product-review-count {
-                 display: inline-block;
-                 margin: 0;
-                 font: 200 .8rem/1.1rem Raleway;
-                 color: white;
-              }
-             } // .stars-col  
-           } // rows.last
+           p.product-review-count {
+             display: inline-block;
+             margin: 0 0 0 0;
+             font: 200 .8rem/1.1rem Raleway;
+             color: white;
+           }
+           
+           p.product-price {
+             display: inline-block;
+             font: 200 .8rem/1.1rem Raleway;
+             color: white;
+             margin: .29rem 0 .8rem 0;
+             
+           }
+         } // rows.last
 
         }  // summary_text
       }  // product_summary
@@ -509,38 +534,62 @@ dl.accordion {
         background-color: DimGray;
         color: white;
         margin: 0;
-        padding: 0;
+        padding: 3% 3%;
         padding-bottom: 1.2rem;
 
         p {
           font: 200 .7rem/1rem Raleway;
+          margin: 0.4rem 0rem 0.5rem 0rem;
 
         }
+
         
-        row.use_again {
+        p.date {
+          display: inline-block;
+          margin-bottom: 0;
+          font: 200 .8rem/1rem Raleway;
+        }
+        
+        .rating {
+          display: inline-block;
+          margin-right: .3rem;
+        }
+        
+        p.title {
+          font: 400 .9rem/1rem Raleway;
+          color: white;
+          margin: 0rem 0rem 0.9rem 0rem;
+          margin-bottom: .9rem;
           
-          p.use_again {
-            display: inline-block;
-            position: relative;
-            width: auto;
-            margin: 0;
-            font: 200 .7rem/1rem Raleway;
+        }
+        
+        p.screen_name {
+          margin: 0.4rem 0rem 0.5rem 0rem;
+        }
 
-
-          }
-          
-          p.recommend {
-            position: relative;
-            display: inline-block;
-            width: auto;
-            left: 8%;
-            margin: 0;
-          }
-        }  //  row.use_again
+//        p.use_again {
+////          display: inline-block;
+//          width: auto;
+//          margin-bottom: 0;
+//          padding: 0;
+//          font: 200 .7rem/1rem Raleway;
+//
+//
+//        }
+//
+//        p.recommend {
+////          display: inline-block;
+//          width: auto;
+//          margin-bottom: 0;
+//          padding: 0;
+//        }
+//
+//        row.use {
+//
+//        }  //  row.use
 
         p.attrib { 
           display: inline-block;
-          position: relative;
           margin: 0;
           padding: 0;
           padding-right: .7rem;
@@ -567,12 +616,21 @@ dl.accordion {
         }
         .review {
           padding-top: .5rem;
-          padding-bottom: 2%;
+//          padding-bottom: .5%;
           font: 200 .7rem/1.1rem Raleway;
         }
+        
+        p.bottom {
+          margin-bottom: 1rem;
+          border: red solid 1px;
+        }
+        
+        
         .all_reviews {
           background-color: $bg-color;
-          color: $lt_blue;
+//          color: $lt_blue;
+          color: white;
+          margin-top: 14rem;
           padding: 2.5% 4.5%;
           font: 200 .8rem/1.7rem Raleway;
 
