--- a/app/views/looks/_product_summary.html.slim
+++ b/app/views/looks/_product_summary.html.slim
@@ -1,21 +1,30 @@
 .row.product_summary
-  .columns.small-3.medium-2.large-2.block.splotch
+  .columns.small-3.medium-3.large-2.block.splotch
     svg.color_sample.centered height="42" width="42"
       circle cx="21" cy="21" r="20" stroke-width=".5" stroke="grey" fill="#{product_app.color.hex_color_val}"
-  .summary_text.columns.small-9.medium-10.large-10
+  .summary_text.columns.small-9.medium-9.large-10
     p.role
       = product_app.role.humanize.upcase
     p.full_name
       = full_name(product_app.product)
+    p.color-name
+      = full_color_name(product_app.color)
     .row.last
-      .columns.large-6.medium-6.small-12.left.color-name
-        p.color
-          = full_color_name(product_app.color)
-      .columns.large-6.medium6.small-12.stars-col
+      .columns.small-12.large-9.stars-col
         .stars
-          - ([1,2,3,4,5][Random.rand(4)]).times do
-            = image_tag("product/review_star.png")
+          - star_cnt = product_app.product.avg_rating.round
+          - nonstar_cnt = 5 - star_cnt
+          - star_cnt.times do
+            = image_tag("star-on.png", class: :star_on)
+          - nonstar_cnt.times do
+            = image_tag("star-off.png", class: :star_off)
         p.product-review-count = " (#{Random.rand(0..500)})"
+      .columns.small-12.large-3
+        p.product-price.right  = number_to_aligned_currency(product_app.product.price, 2 )
+        
+        / .star data-readonly='true' data-enable-half='true' data-half-show='true' data-rating='4'
+        /   rating_for(product_app.product)
+          
           
         
 
