--- a/app/views/looks/_product_review.html.slim
+++ b/app/views/looks/_product_review.html.slim
@@ -37,7 +37,7 @@
   .row.profile1
     .columns.small-12
       p.attrib.bottom = "Skin type: #{profile.skin_type}" unless profile.skin_type.blank?
-  .row.text-center
+  .row.text-center.link
     = link_to("Read all reviews", "product_reviews", class: :all_reviews)
       
         
