--- a/app/views/looks/show.html.slim
+++ b/app/views/looks/show.html.slim
@@ -1,95 +1,108 @@
+.tab-row.sticky-nav
+  ul.tabs data-tab=""
+    li.tab-title.active
+      a href="#details"  Look Details
+    li.tab-title
+      a href="#facemap" Face Map
+    li.tab-title
+      a href="#reviews"  Reviews
+    
+.tabs-content
+  .content#facemap
+    = render partial: "face_map", locals: {look: @look, set: @set}
+    
+  .content#reviews  Add Reviews
 
-
-.row.show_container
-  .row.title_row
-    .columns.small-12.text-center
-      p.look_number = "ColorSisters Look: #{@look.code}"
-      p.look_name = @look.title
-  .row.star-row
-    columns.small-12.text-center.stars-col
-      .stars
-        - star_cnt = @look.avg_rating.round
-        - nonstar_cnt = 5 - star_cnt
-        - star_cnt.times do
-          = image_tag("star-on.png", class: :star_on)
-        - nonstar_cnt.times do
-          = image_tag("star-off.png", class: :star_off)
-      p.product-review-count = " (#{@look.look_reviews_count})"
-  .row.desc_row
-    .columns.medium-6.small-12.text-center
-      p.title Description
-    .columns.medium-6.small-12.text-center
-      p.title Usage
-  .row.desc_row
-    .columns.medium-6.small-12.text-left
-      p.desc = @look.desc
-    .columns.medium-6.small-12.text-left
-      p.usage = @look.usage_directions
+  .row.show_container.content.active#details
+    .row.title_row
+      .columns.small-12.text-center
+        p.look_number = "ColorSisters Look: #{@look.code}"
+        p.look_name = @look.title
+    .row.star-row
+      columns.small-12.text-center.stars-col
+        .stars
+          - star_cnt = @look.avg_rating.round
+          - nonstar_cnt = 5 - star_cnt
+          - star_cnt.times do
+            = image_tag("star-on.png", class: :star_on)
+          - nonstar_cnt.times do
+            = image_tag("star-off.png", class: :star_off)
+        p.product-review-count = " (#{@look.look_reviews_count})"
+    .row.desc_row
+      .columns.medium-6.small-12.text-center
+        p.title Description
+      .columns.medium-6.small-12.text-center
+        p.title Usage
+    .row.desc_row
+      .columns.medium-6.small-12.text-left
+        p.desc = @look.desc
+      .columns.medium-6.small-12.text-left
+        p.usage = @look.usage_directions
       
-  .row.image_sep.text-center
-    .columns.small-12
-        = image_tag("home_page/xsepWhite.png", class: :sep_image)
-  .row.dual-col-container
-    .image.columns.large-6.medium-6.small-12.right
-      .row.overview_img
-        .columns.small-12
-          = image_tag(look_summary_image(@look).filepath , class: :look_img, alt: "ColorSisters look overview")
-      .row.nav-links
-        .columns.small-12.text-center
-          .btn-grp
-            = link_to("LOOKS", looks_path)
-            = link_to("CUSTOMIZE", "customize", class: :customize)
-            = link_to("ADD LOOK TO CART", "add_look", class: :look_cart)
+    .row.image_sep.text-center
+      .columns.small-12
+          = image_tag("home_page/xsepWhite.png", class: :sep_image)
+    .row.dual-col-container
+      .image.columns.large-6.medium-6.small-12.right
+        .row.overview_img
+          .columns.small-12
+            = image_tag(look_summary_image(@look).filepath , class: :look_img, alt: "ColorSisters look overview")
+        .row.nav-links
+          .columns.small-12.text-center
+            .btn-grp
+              = link_to("LOOKS", looks_path)
+              = link_to("CUSTOMIZE", "customize", class: :customize)
+              = link_to("ADD LOOK TO CART", "add_look", class: :look_cart)
 
 
-      .row.price-summary
-        .columns.small-12.large-8.large-centered
-          p.price-summary-title.text-center
-             = "ColorSisters Look #{@look_num} Price Summary"
-          .row.item-list
-            - @set.categories.each do |category|
-              .columns.small-12.small-centered
-                p.item-category = "#{category.titleize}: "
-              .row
-                - @set.clusters_by_category(category).each do |cluster|
-                  .columns.small-1
-                  .columns.small-6.small-offset-1
-                    p.item = cluster.role.humanize.titleize
-                  .columns.small-5.text-right 
-                    p.item-price
-                      =  number_to_aligned_currency(cluster.default_product_app.product.price, 2)
-        .row
-          columns.small-12
-            p.total_cost.text-center
-              = "#{product_role_count} items totaling #{number_to_aligned_currency(total_product_cost, 3)}"
+        .row.price-summary
+          .columns.small-12.large-8.large-centered
+            p.price-summary-title.text-center
+               = "ColorSisters Look #{@look_num} Price Summary"
+            .row.item-list
+              - @set.categories.each do |category|
+                .columns.small-12.small-centered
+                  p.item-category = "#{category.titleize}: "
+                .row
+                  - @set.clusters_by_category(category).each do |cluster|
+                    .columns.small-1
+                    .columns.small-6.small-offset-1
+                      p.item = cluster.role.humanize.titleize
+                    .columns.small-5.text-right 
+                      p.item-price
+                        =  number_to_aligned_currency(cluster.default_product_app.product.price, 2)
+          .row
+            columns.small-12
+              p.total_cost.text-center
+                = "#{product_role_count} items totaling #{number_to_aligned_currency(total_product_cost, 3)}"
 
 
-    .col-container.columns.medium-6.small-12.left
-      / .row
-      /   .columns.large-12
-      - @set.categories.each_with_index do |category, index|
-        .row.category1
-          .columns.large-12.medium-12.small-12.category.large-centered.medium-centered.small-cenered
-            p.cat
-              = category.to_s.titleize
-            ul id="how_to" style='display:none;'
-              / li data-url="https://www.youtube.com/watch?v=DQpoOnI6wtM" data-thumbnail-path="#{image_path('product/img_4.jpg')}"
-              li data-url=how_to_video_url("face") data-thumbnail-path=how_to_index_image_asset_path("face") 
-                p.gallery1DecHeader How to makeup your face
-              li data-url=how_to_video_url("eyes") data-thumbnail-path=how_to_index_image_asset_path("eyes")
-                p.gallery1DecHeader  How to makeup your eyes
-              li data-url=how_to_video_url("lips") data-thumbnail-path=how_to_index_image_asset_path("lips") 
-                p.gallery1DecHeader  How to makeup your lips
-              li data-url=how_to_video_url("cheeks") data-thumbnail-path=how_to_index_image_asset_path("cheeks")
-                p.gallery1DecHeader  How to makeup your cheeks
-                / TODO Move this js out of template
-            a.how_vid href="javascript:void(0)"  onclick="FWDRL.show('how_to', #{index});"  
-              | See How
+      .col-container.columns.medium-6.small-12.left
+        / .row
+        /   .columns.large-12
+        - @set.categories.each_with_index do |category, index|
+          .row.category1
+            .columns.large-12.medium-12.small-12.category.large-centered.medium-centered.small-cenered
+              p.cat
+                = category.to_s.titleize
+              ul id="how_to" style='display:none;'
+                / li data-url="https://www.youtube.com/watch?v=DQpoOnI6wtM" data-thumbnail-path="#{image_path('product/img_4.jpg')}"
+                li data-url=how_to_video_url("face") data-thumbnail-path=how_to_index_image_asset_path("face") 
+                  p.gallery1DecHeader How to makeup your face
+                li data-url=how_to_video_url("eyes") data-thumbnail-path=how_to_index_image_asset_path("eyes")
+                  p.gallery1DecHeader  How to makeup your eyes
+                li data-url=how_to_video_url("lips") data-thumbnail-path=how_to_index_image_asset_path("lips") 
+                  p.gallery1DecHeader  How to makeup your lips
+                li data-url=how_to_video_url("cheeks") data-thumbnail-path=how_to_index_image_asset_path("cheeks")
+                  p.gallery1DecHeader  How to makeup your cheeks
+                  / TODO Move this js out of template
+              a.how_vid href="javascript:void(0)"  onclick="FWDRL.show('how_to', #{index});"  
+                | See How
             
             
-        dl class="accordion"  data-accordion="look_products"
-          - @set.clusters_by_category(category).each do |cluster|
-            = render("looks/role_product", product_app: cluster.default_product_app)
+          dl class="accordion"  data-accordion="look_products"
+            - @set.clusters_by_category(category).each do |cluster|
+              = render("looks/role_product", product_app: cluster.default_product_app)
 
         
 
