Uncommented out face map page content.

--- a/app/views/looks/show.html.slim
+++ b/app/views/looks/show.html.slim
@@ -9,7 +9,7 @@
     
 .tabs-content
   .content#facemap
-    / = render partial: "face_map", locals: {look: @look, set: @set}
+    = render partial: "face_map", locals: {look: @look, set: @set}
     
   .content#reviews  Add Reviews
 
